# axum-cloudflare-r2

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs  storage.rs
